fix some spacing issues

--- a/local-dev/scss/elements/_page-title.scss
+++ b/local-dev/scss/elements/_page-title.scss
@@ -3,7 +3,7 @@
 h2.page-title {
   clear:both;
   color:$grey-light-3;
-  padding:0 $side-spacing-mobile;
+  padding:0;
   font-size:20px;
   text-shadow:0 2px 4px #000;
   text-transform:uppercase;
